--- a/src/sys/kern/syscalls.master
+++ b/src/sys/kern/syscalls.master
@@ -564,6 +564,6 @@
 			    const struct timespec *times, int flag); }
 327	STD		{ int sys_futimens(int fd, \
 			    const struct timespec *times); }
-328	OBSOL		otfork51
+328	COMPAT_O51	{ int sys___tfork(struct __tfork51 *param); }
 329	STD NOLOCK	{ void sys___set_tcb(void *tcb); }
 330	STD NOLOCK	{ void *sys___get_tcb(void); }
